--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,35 @@
-group 'cz.sionzee.bukkit'
-version '0.0.1'
-
 buildscript {
-    ext.kotlin_version = '1.2.10'
 
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
         mavenCentral()
-        jcenter()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "gradle.plugin.ru.endlesscode.gradle:bukkit-gradle:0.3.5"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
     }
-
-
 }
 
-apply plugin: 'jacoco'
-apply plugin: 'kotlin'
-apply plugin: 'ru.endlesscode.gradle.bukkit'
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.2.10"
+    id "idea"
+
+    id "java-gradle-plugin"
+    id "com.gradle.plugin-publish" version "0.9.9"
+    id "ru.endlesscode.bukkitgradle" version "0.7.0"
+}
+
+apply from: "jacoco.gradle"
+
+group 'cz.sionzee.bukkit'
+description "CommandsAPI for Bukkit interface"
+version '0.0.1'
+
 
 bukkit {
+    version = "1.12.2"
 
     // Attributes for plugin.yml
     meta {
@@ -44,10 +49,9 @@ repositories {
 }
 
 dependencies {
-//    compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
+    compile bukkit()
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:1.2.10"
+    compileOnly "org.jetbrains.kotlin:kotlin-reflect:1.2.10"
 }
 
 jar {
