--- a/BungeeCord/build.gradle
+++ b/BungeeCord/build.gradle
@@ -1,18 +1,12 @@
+plugins {
+    id "org.jetbrains.kotlin.jvm"
+    id "idea"
+}
+
+
 group 'cz.sionzee.bukkit'
 version '0.0.2'
 
-buildscript {
-    ext.kotlin_version = '1.2.10'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
-apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
@@ -21,7 +15,7 @@ repositories {
 
 dependencies {
     compile rootProject
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.10"
     compile "net.md-5:bungeecord-api:1.12-SNAPSHOT"
 }
 
