--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,20 @@
 buildscript {
+    ext.kotlin_version = '1.2.10'
 
     repositories {
+        mavenCentral()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        mavenCentral()
     }
-
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "gradle.plugin.ru.endlesscode:bukkit-gradle:0.7.0"
     }
 }
 
-plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.2.10"
-    id "idea"
-    id "ru.endlesscode.bukkitgradle" version "0.7.0"
-}
-
+apply plugin: 'kotlin'
+apply plugin: "ru.endlesscode.bukkitgradle"
 apply from: "jacoco.gradle"
 
 group 'cz.sionzee.bukkit'
